--- a/src/sass/components/articles.sass
+++ b/src/sass/components/articles.sass
@@ -64,9 +64,6 @@
   line-height: 1.6rem
   font-size: 19px
 
-.articles--list-hero
-  margin-bottom: 4rem
-
 
 .articles--group
   margin-top: 3rem
