--- a/src/sass/components/hero.sass
+++ b/src/sass/components/hero.sass
@@ -35,7 +35,11 @@
     display: block
     font-size: 1.2rem
 
+
 .articles--list-hero
+  margin-bottom: 4rem
+  padding-left: 0
+  padding-right: 0
   .article--content
     .aesop-image-component
       display: none
